fix: prevent product images from overflowing their container

--- a/css/band3.css
+++ b/css/band3.css
@@ -11,11 +11,3 @@ body {
     background-attachment: fixed;
 }
 
-.product-image-placeholder img{
-    width: 200px;
-    height: 200px;
-    display: block;
-    margin: auto;
-    border: 2px solid #f0c14b;
-    border-radius: 15px;
-}
